update gen api
