# gen/api/server.gen.go
@@ -1,6 +1,6 @@
 // Package api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.11.0 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.12.4 DO NOT EDIT.
 package api
 
 import (
@@ -11,132 +11,14 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
-// Book defines model for book.
-type Book struct {
-	// uuid
-	BookId string  `json:"book_id"`
-	Image  *string `json:"image,omitempty"`
-	Title  string  `json:"title"`
-}
-
-// Books defines model for books.
-type Books = []Book
-
-// Login defines model for login.
-type Login struct {
-	// jwtのトークン
-	Token *string `json:"token,omitempty"`
-}
-
-// Summaries defines model for summaries.
-type Summaries = []Summary
-
-// Summary defines model for summary.
-type Summary struct {
-	// uuid
-	SumamryId *string `json:"sumamry_id,omitempty"`
-	Summary   string  `json:"summary"`
-}
-
-// Tag defines model for tag.
-type Tag struct {
-	Tag string `json:"tag"`
-
-	// uuid
-	TagId string `json:"tag_id"`
-}
-
-// Tags defines model for tags.
-type Tags = []Tag
-
-// AlreadyRead defines model for already-read.
-type AlreadyRead = bool
-
-// BookId defines model for book-id.
-type BookId = string
-
-// QueryBookId defines model for query-book-id.
-type QueryBookId = string
-
-// SummaryId defines model for summary-id.
-type SummaryId = string
-
-// TagId defines model for tag-id.
-type TagId = string
-
-// UserId defines model for user-id.
-type UserId = string
-
-// Authentication defines model for authentication.
-type Authentication struct {
-	// password
-	Password *string `json:"password,omitempty"`
-
-	// user_id
-	UserId *string `json:"user_id,omitempty"`
-}
-
-// PutSummary defines model for put-summary.
-type PutSummary struct {
-	// summary
-	Summary *string `json:"summary,omitempty"`
-}
-
-// PutTag defines model for put-tag.
-type PutTag struct {
-	// tag
-	Tag *string `json:"tag,omitempty"`
-}
-
-// GetBooksParams defines parameters for GetBooks.
-type GetBooksParams struct {
-	UserId UserId `form:"user_id" json:"user_id"`
-}
-
-// PutBookParams defines parameters for PutBook.
-type PutBookParams struct {
-	AlreadyRead AlreadyRead `form:"already_read" json:"already_read"`
-}
-
-// GetSummariesParams defines parameters for GetSummaries.
-type GetSummariesParams struct {
-	BookId QueryBookId `form:"book_id" json:"book_id"`
-}
-
-// GetTagsParams defines parameters for GetTags.
-type GetTagsParams struct {
-	UserId UserId `form:"user_id" json:"user_id"`
-}
-
-// PostBooksJSONRequestBody defines body for PostBooks for application/json ContentType.
-type PostBooksJSONRequestBody Book
-
-// PostSummariesJSONRequestBody defines body for PostSummaries for application/json ContentType.
-type PostSummariesJSONRequestBody Summary
-
-// PutSummaryJSONRequestBody defines body for PutSummary for application/json ContentType.
-type PutSummaryJSONRequestBody PutSummary
-
-// PostTagsJSONRequestBody defines body for PostTags for application/json ContentType.
-type PostTagsJSONRequestBody Tag
-
-// PutTagJSONRequestBody defines body for PutTag for application/json ContentType.
-type PutTagJSONRequestBody PutTag
-
-// LoginJSONRequestBody defines body for Login for application/json ContentType.
-type LoginJSONRequestBody Authentication
-
-// SignupJSONRequestBody defines body for Signup for application/json ContentType.
-type SignupJSONRequestBody Authentication
-
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
 	// ヘルスチェック
 	// (GET /api/_healthz)
 	GetApiHealthz(ctx echo.Context) error
-	// user_idから複数のbook_idを取得。それぞれのbook_idから本の情報を取得
+	// usernameから複数のbook_idを取得。それぞれのbook_idから本の情報を取得
 	// (GET /api/books)
-	GetBooks(ctx echo.Context, params GetBooksParams) error
+	GetBooks(ctx echo.Context) error
 	// 新たなbookを登録
 	// (POST /api/books)
 	PostBooks(ctx echo.Context) error
@@ -164,19 +46,19 @@ type ServerInterface interface {
 	// summary_idのsummaryを修正
 	// (PUT /api/summaries/{summary_id})
 	PutSummary(ctx echo.Context, summaryId SummaryId) error
-	// user_idのタグを全取得
+	// usernameのタグを全取得
 	// (GET /api/tags)
-	GetTags(ctx echo.Context, params GetTagsParams) error
-	// user_idのtagリストにtagを追加
+	GetTags(ctx echo.Context) error
+	// usernameのtagリストにtagを追加
 	// (POST /api/tags)
 	PostTags(ctx echo.Context) error
-	// user_id, tag_idのtagを修正
+	// username, tag_idのtagを修正
 	// (DELETE /api/tags/{tag_id})
 	DeleteTag(ctx echo.Context, tagId TagId) error
-	// user_id, tag_idのtagを取得
+	// username, tag_idのtagを取得
 	// (GET /api/tags/{tag_id})
 	GetTag(ctx echo.Context, tagId TagId) error
-	// user_id, tag_idのtagを修正
+	// username, tag_idのtagを修正
 	// (PUT /api/tags/{tag_id})
 	PutTag(ctx echo.Context, tagId TagId) error
 	// login
@@ -205,17 +87,8 @@ func (w *ServerInterfaceWrapper) GetApiHealthz(ctx echo.Context) error {
 func (w *ServerInterfaceWrapper) GetBooks(ctx echo.Context) error {
 	var err error
 
-	// Parameter object where we will unmarshal all parameters from the context
-	var params GetBooksParams
-	// ------------- Required query parameter "user_id" -------------
-
-	err = runtime.BindQueryParameter("form", true, true, "user_id", ctx.QueryParams(), &params.UserId)
-	if err != nil {
-		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter user_id: %s", err))
-	}
-
 	// Invoke the callback with all the unmarshalled arguments
-	err = w.Handler.GetBooks(ctx, params)
+	err = w.Handler.GetBooks(ctx)
 	return err
 }
 
@@ -364,17 +237,8 @@ func (w *ServerInterfaceWrapper) PutSummary(ctx echo.Context) error {
 func (w *ServerInterfaceWrapper) GetTags(ctx echo.Context) error {
 	var err error
 
-	// Parameter object where we will unmarshal all parameters from the context
-	var params GetTagsParams
-	// ------------- Required query parameter "user_id" -------------
-
-	err = runtime.BindQueryParameter("form", true, true, "user_id", ctx.QueryParams(), &params.UserId)
-	if err != nil {
-		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter user_id: %s", err))
-	}
-
 	// Invoke the callback with all the unmarshalled arguments
-	err = w.Handler.GetTags(ctx, params)
+	err = w.Handler.GetTags(ctx)
 	return err
 }
 
